[package]
name = "eon_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eon"
path = "src/main.rs"

[dependencies]
clap_complete = "4.0.0"
clap = {version = "4.0.0", features = ["derive"]}
spdlog-rs = "0.4"
tokio = { version = "1.0", features = ["full", "process", "sync", "io-util"] }
prettytable = "0.10.0"
