[package]
name = "eon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eon"
path = "main.rs"

[dependencies]
common = {path = "../common"}

clap_complete = "4.0.0"
clap = {version = "4.0.0", features = ["derive"]}
spdlog-rs = "0.4"
tokio = { version = "1.0", features = ["full", "process", "sync", "io-util"] }
prettytable = "0.10.0"
chrono = "0.4.41"

# tui-rs
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"